--- a/src/component/Sliderr/Slider.css
+++ b/src/component/Sliderr/Slider.css
@@ -12,6 +12,9 @@
     margin-left: 5rem;
     margin-right: 5rem;
 } */
+swiper{
+    margin-top: 10rem;
+}
 .slid{
     width: 200px;
     height: 50px;
@@ -28,7 +31,7 @@
     border-radius: 1rem;
     position: relative;
     transition: all 0.5s linear;
-    margin-top: 10rem;
+    /* margin-top: 10rem; */
 }
 .namangan{
     background: url(../../../public/images/namamgan_region.jpg);
